--- a/src/FluentResults/FluentResults.csproj
+++ b/src/FluentResults/FluentResults.csproj
@@ -1,18 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.1;netstandard2.0;netstandard2.1;net45;net48</TargetFrameworks>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <PackageId>FluentResults</PackageId>
     <PackageVersion>1.3.0.0</PackageVersion>
     <Authors>Michael Altmann</Authors>
     <Description>A lightweight Result object implementation for .NET</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes>
-.NET Standard 2.1 and .NET 4.8 support
-Add Merge() IEnumerable extension method
+      .NET Standard 2.2
+      Add Merge() IEnumerable extension method
+      UPDATED by Ian Daniel
+        - Removed ValueOrDefault property;
+        - Removed throw Exception from Value property;
+        - Add .Join method to join Results.
     </PackageReleaseNotes>
     <Copyright>Copyright 2019 (c) Michael Altmann. All rights reserved.</Copyright>
     <PackageTags>Result Results exception error handling</PackageTags>
     <PackageProjectUrl>https://github.com/altmann/FluentResults</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/altmann/FluentResults/master/resources/icons/FluentResults-Icon-64.png</PackageIconUrl>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="8.5.0" />
+  </ItemGroup>
 </Project>
